# Axios-Guardian

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: scan.yml
axios_guardian/: __init__.py  __main__.py  blocklist.json  cli.py  fixer.py  notifier.py  reporter.py  scanner.py
tests/: conftest.py  test_cli.py  test_fixer.py  test_reporter.py  test_scanner.py
